[gd_scene load_steps=7 format=2]

[ext_resource path="res://scripts/lift_door.gd" type="Script" id=1]
[ext_resource path="res://sprites/debris/blast door/blast_door_0.png" type="Texture" id=2]
[ext_resource path="res://sprites/debris/blast door/blast_door_2.png" type="Texture" id=3]
[ext_resource path="res://sprites/debris/blast door/blast_door_1.png" type="Texture" id=4]
[ext_resource path="res://sprites/debris/blast door/blast_door_3.png" type="Texture" id=5]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 12, 24 )

[node name="BlastDoor" type="Node" index="0"]

[node name="Top" type="Area2D" parent="." index="0"]

position = Vector2( 0, -24 )
rotation = 0.0217042
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 1 )
_sections_unfolded = [ "Transform" ]
direction = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="Top" index="0"]

shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="Top" index="1"]

scale = Vector2( 3, 3 )
texture = ExtResource( 2 )
_sections_unfolded = [ "Offset", "Transform" ]

[node name="Sprite2" type="Sprite" parent="Top" index="2"]

position = Vector2( 0, 6 )
scale = Vector2( 3, 3 )
z_index = -1
texture = ExtResource( 3 )
_sections_unfolded = [ "Offset", "Transform", "Z Index" ]

[node name="Bottom" type="Area2D" parent="." index="1"]

position = Vector2( 0, 24 )
rotation = -0.116819
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 1 )
_sections_unfolded = [ "Transform" ]
direction = -1

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bottom" index="0"]

shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="Bottom" index="1"]

scale = Vector2( 3, 3 )
texture = ExtResource( 4 )
_sections_unfolded = [ "Transform" ]

[node name="Sprite2" type="Sprite" parent="Bottom" index="2"]

position = Vector2( 0, -6 )
scale = Vector2( 3, 3 )
z_index = -1
texture = ExtResource( 5 )
_sections_unfolded = [ "Transform", "Z Index" ]

[node name="Camera2D" type="Camera2D" parent="." index="2"]

anchor_mode = 1
rotating = false
current = true
zoom = Vector2( 0.3, 0.3 )
limit_left = -10000000
limit_top = -10000000
limit_right = 10000000
limit_bottom = 10000000
limit_smoothed = false
drag_margin_h_enabled = true
drag_margin_v_enabled = true
smoothing_enabled = false
smoothing_speed = 5.0
offset_v = 0.0
offset_h = 0.0
drag_margin_left = 0.2
drag_margin_top = 0.2
drag_margin_right = 0.2
drag_margin_bottom = 0.2
editor_draw_screen = true
editor_draw_limits = false
editor_draw_drag_margin = false

[connection signal="area_entered" from="Top" to="Bottom" method="_on_Top_area_entered"]

[connection signal="area_exited" from="Top" to="Bottom" method="_on_Top_area_exited"]

[connection signal="area_entered" from="Bottom" to="Top" method="_on_Bottom_area_entered"]

[connection signal="area_exited" from="Bottom" to="Top" method="_on_Bottom_area_exited"]


